Revision history for Perl extension Coro.

1.6  Mon Dec 12 21:30:05 CET 2005
	- additionally save PM_curpm might fix as-of-yet
          unseen problems with regex matches being attributed to the
          wrong package.
        - add t/10_bugs.t, which currently checks against imho broken
          perls that use 0.26MB of stack space per Perl_magic_get
          invocation (newer linuxes) as opposed to the 0.0002MB perl
          normally uses.
        - make stacksize configurable for the ultimate debian experience.

1.51 Mon Dec 12 18:48:36 CET 2005
	- remove debugging warn() accidentally left in Coro::Select.

1.5  Tue Nov 29 13:32:44 CET 2005
	- use Coro::Event inside Coro::Select to avoid spurious deadlocks.
        - fix Coro::Select 'select'.
        - strict'ify some modules.
	- libcoro errornously restored the SIGUSR2 handler to SIGUSR1.
        - use XSLoader in selected modules.
        - remove some 5.6 compatibility cruft.

1.4  Tue Sep  6 00:11:05 CEST 2005
	- libcoro did not take into account the trampoline on amd64,
          when 'l'inux method was used.

1.31 Tue Aug 30 23:31:33 CEST 2005
	- some portability fixes/workarounds.

1.3  Sat Aug 20 03:08:56 CEST 2005
	- no code changes. module seems to work fine.
	- improve Coro::State docs, remove reference to nonexisting
          Coro::State::flush method.
        - no longer autodetect windows, present it as an option instead.

1.2  Mon May 16 02:00:55 CEST 2005
	- included libcoro.c earlier in State.xs, might improve portability.
        - use a faster and possibly more stable Coro::Cont implementation.
        - accept x86_64 in addition to amd64 for optimized linux-amd64 support.
        - fix bugs Coro::SemaphoreSet that could cause locks never to be freed.
        - fix bugs in CoroAPI.h and document it in Coro::MakeMaker.

1.11 Thu Mar  3 18:00:52 CET 2005
	- change of contact address.

1.1 Tue Feb 22 20:51:16 CET 2005
	- support [l]inux method on amd64.