@@ -18,14 +18,14 @@ if ($^O =~ /win32/i or $^O =~ /cygwin/ or $^O =~ /mswin/) {
    # default to setjmp/longjmp on non-x86...
    $iface = $Config{archname} =~ /^(i[3456]86|amd64|x86_64)-/ ? "l" : "s";
 } elsif ($^O =~ /(free|net|open)bsd/) {
-   # FreeBSD 4.x has ucontext.h but no makecontext et al (see BUGS section of
+   # FreeBSD 4.x has ucontext.h but no makecontext et al. (see BUGS section of
    # man context). Assume the same problem for all other BSDs.
    $iface = "s";
 } elsif ($^O =~ /solaris/) {
    $iface = "s";
 } elsif ($^O =~ /darwin/) {
    $iface = "s";
-} elsif (-e "/usr/include/ucontext.h") {
+} elsif (-e "/usr/include/ucontext.h") { # shame on this heuristic
    $iface = "u";
 } else {
    $iface = "s";
@@ -42,11 +42,11 @@ segfaults. On my Linux/x86 machine this decreased the size of a new
 coroutine from 9k to 5k, but the savings are much more apparent on
 machines without mmap or good memory management.
 
-This algorithm relies on the non-fact that the same machine stack pointer
+The algorithm relies on the non-fact that the same machine stack pointer
 indicates the same function call nesting level, which usually works good
-enough (no known cases of it failing are known) but might fail.
+enough (no known cases of it failing are known) but might fail in theory.
 
-The default (enabled) has been in-use on productions servers for some
+The default (enabled) has been in use on productions servers for some
 time now, without any problem reports, so you are encouraged to use the
 default.
 
@@ -62,9 +62,9 @@ if ($iface) {
 
 *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** 
 
-Coro can use various ways to implement coroutines at C level. The default
-chosen is based on your current confguration and is correct in most cases,
-but you still can chose between these alternatives:
+Coro can use a number of methods to implement coroutines at the C
+level. The default chosen is based on your current confguration and is
+correct in most cases, but you still can chose between these alternatives:
 
 u  The unix 'ucontext.h' functions are relatively new and not implemented
    or well-tested in older unices. They allow very fast coroutine creation
@@ -79,12 +79,12 @@ s  If the ucontext functions are not working or you don't want
 
 l  GNU/Linux. Very old GNU/Linux systems (glibc-2.1 and below) need
    this hack. Since it is very linux-specific it is also quite fast and
-   recommended for newer versions; when it works, that is (currently x86
-   and a few others only. If it compiles, it's usually ok).
+   recommended even for newer versions; when it works, that is (currently
+   x86 and a few others only. If it compiles, it's usually ok).
 
-i  IRIX. For some reason, SGI really does not like to follow the unix
-   standard (does that surprise you?), so this workaround might be needed
-   (it's fast), although [s] and [u] should also work now.
+i  IRIX. For some reason, SGI really does not like to follow the single
+   unix specification (does that surprise you?), so this workaround might
+   be needed (it's fast), although [s] and [u] should also work now.
 
 w  Microsoft Windows. Try this on Microsoft Windows, although, as there is
    no standard on how to do this under windows, this might work only on
@@ -135,20 +135,20 @@ print <<EOF;
 Per-context stack size factor: Depending on your settings, Coro tries to
 share the C stack as much as possible, but sometimes it needs to allocate
 a new one. This setting controls the maximum size that gets allocated,
-and should not be set too high, as memory and address space still gets
+and should not be set too high, as memory and address space still is
 wasted even if it's not fully used. The value entered will be multiplied
 by sizeof(long), which is usually 4 on 32-bit systems, and 8 on 64-bit
 systems.
 
 A setting of 16384 (the default) therefore corresponds to a 64k..128k
-stack, which usually is ample enough space (you might want to try 8192 or
+stack, which usually is ample space (you might even want to try 8192 or
 lower if your program creates many coroutines).
 
-Some perls (mostly threaded ones) and some programs (inefficient regexes
-can use a lot of stack space) may need much, much more: If Coro segfaults
-with weird backtraces (e.g. in a function prologue) or in t/10_bugs.t, you
-might want to increase this to 65536 or more (debian perls might require
-this).
+Some perls (mostly threaded ones and perl compiled under linux 2.6) and
+some programs (inefficient regexes can use a lot of stack space) may
+need much, much more: If Coro segfaults with weird backtraces (e.g. in a
+function prologue) or in t/10_bugs.t, you might want to increase this to
+65536 or more.
 
 EOF
 
